jellyfin/overlays/kind/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
spec:
  parentRefs:
  - name: envoy-private
    namespace: envoy-gateway-system
    sectionName: https
  hostnames:
  - jellyfin.local
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jellyfin
      port: 80
