jellyfin/overlays/kind/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
spec:
  ingressClassName: nginx
  tls:
  - secretName: jellyfin-cert
    hosts:
    - &host jellyfin.local
  rules:
  - host: *host
    http:
      paths:
      - backend:
          service:
            name: jellyfin
            port:
              name: http
        path: /
        pathType: Prefix
